ingress/ingress-file.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  ingressClassName: alb
  tls:
    - secretName: tls-secret  # The secret containing your certificate
  rules:
  - http:
      paths:
      - path: /happy/
        pathType: Prefix
        backend:
          service:
            name: happy-service
            port:
              number: 8081
      - path: /sad/
        pathType: Prefix
        backend:
          service:
            name: sad-service
            port:
              number: 8082
      - path: /angry/
        pathType: Prefix
        backend:
          service:
            name: angry-service
            port:
              number: 8083
